styles/style.css
:root {
  --side-padding: 14vw;
  --dark-blue: #1f2937;
  --gray: #e5e7eb;
  --header-logo-color: #f9faf8;
  --btn-color: #3882f6;
}

body,
html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body,
ul,
h1,
h3,
p {
  margin: 0;
  padding: 0;
}

.card-heading {
  margin: 0.9em;
  font-size: 36px;
  font-weight: 900;
  color: #1f2937;
}

.wrapper {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.wrapper > * {
  padding: 0 var(--side-padding);
}

.wrapper > header {
  background-color: var(--dark-blue);
  padding-top: 1.5em;
}

.logo {
  font-size: 24px;
  color: var(--header-logo-color);
}

header ul {
  display: flex;
  align-items: baseline;
  gap: 1em;
}

.push-right {
  margin-left: auto;
}

header ul li {
  list-style-type: none;
}

header ul li a {
  text-decoration: none;
}

header ul li a,
.hero-content > p {
  font-size: 18px;
  color: var(--gray);
}

a:hover {
  text-decoration: underline;
}

.hero-wrapper {
  display: flex;
  align-items: center;
  background: var(--dark-blue);
  padding: 96px var(--side-padding);
  gap: 3em;
}

.hero-wrapper > * {
  flex: 1;
}

.hero-wrapper a {
  color: var(--btn-color);
}

.hero-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

button {
  padding: 0.5em 2em;
  background-color: var(--btn-color);
  color: var(--header-logo-color);
  font-weight: bold;
  font-size: 1.1em;
  border-radius: 10px;
}

.hero-content button {
  border: none;
  margin-top: 0.5em;
}

.hero-heading {
  font-size: 48px;
  font-weight: 900;
  color: var(--header-logo-color);
}

img {
  min-width: 0;
  max-width: 100%;
  object-fit: scale-down;
}

.card-section-wrapper {
  height: 500px;
}

.card-heading {
  text-align: center;
}

.card-wrapper {
  display: flex;
  text-align: center;
  gap: 2em;
  padding: 0 5em;
}

.card {
  flex: 1;
}

.card-img-wrapper {
  aspect-ratio: 1 /1;
}

.card-img-wrapper img {
  border: 5px solid var(--btn-color);
  border-radius: 10%;
  height: 100%;
  object-fit: cover;
}

.quote-wrapper {
  display: flex;
  background: var(--gray);
  flex-flow: column;
  align-items: center;
  justify-content: center;
  height: 400px;
  padding: 0 25vw;
}

.quote-text {
  font-size: 36px;
  font-weight: lighter;
  font-style: italic;
  color: var(--dark-blue);
}

.quote-author {
  align-self: flex-end;
  font-weight: bold;
  font-size: 24px;
}

section.cta-wrapper {
  height: 350px;
  display: flex;
  align-items: center;
  color: var(--header-logo-color);
}

.cta-inner {
  background: var(--btn-color);
  width: 100%;
  padding: 50px 125px;
  border-radius: 8px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.cta-inner button {
  border: 2px solid var(--header-logo-color);
}

footer {
  display: flex;
  height: 6em;
  background-color: var(--dark-blue);
  align-items: center;
  justify-content: center;
  color: var(--header-logo-color);
}

